packages/compiler-rs/tests/snapshots/v_for__key_only_binding_pattern.snap
---
source: tests/v_for.rs
expression: code
---
import { setNodes as _setNodes } from "vue-jsx-vapor";
import { child as _child, createFor as _createFor, template as _template } from "vue";
const t0 = _template("<tr> </tr>");
(() => {
  const n0 = _createFor(() => rows, (_for_item0) => {
    const n2 = t0();
    const x2 = _child(n2);
    _setNodes(x2, () => _for_item0.value.id + _for_item0.value.id);
    return n2;
  }, (row) => row.id);
  return n0;
})();
