packages/compiler-rs/tests/snapshots/v_for__object_de_structured_value_with_rest.snap
---
source: tests/v_for.rs
expression: code
---
import { setNodes as _setNodes } from "vue-jsx-vapor";
import { child as _child, createFor as _createFor, getRestElement as _getRestElement, template as _template } from "vue";
const t0 = _template("<div> </div>");
(() => {
  const n0 = _createFor(() => list, (_for_item0, _for_key0) => {
    const n2 = t0();
    const x2 = _child(n2);
    _setNodes(x2, () => _for_item0.value.id + _getRestElement(_for_item0.value, ["id"]) + _for_key0.value);
    return n2;
  }, ({ id, ...other }, index) => id);
  return n0;
})();
